--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,7 +9,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # # Create Runner
-# FROM python:3.11.6-slim AS runner
+FROM python:3.11.6-slim AS runner
 
 # set env variables
 # Prevents Python from writing pyc and from buffering stdout and stderr
@@ -17,7 +17,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # copy project
-# COPY --from=builder /usr/local/lib/pyhton3.11/site-packages /usr/local/lib/pyhton3.11/site-packages
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY . .
 
 # Expose the port on which the api will run
