--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,3 +1,7 @@
+events {
+  worker_connections 1024;
+}
+
 http {
   # NGINX will handle gzip compression of responses from the app server
   gzip on;
@@ -17,7 +21,7 @@ http {
 
       # Only requests matching the expectations will
       # get sent to the application server
-      proxy_pass http://localhost:8000;
+      proxy_pass http://localhost:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
