--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -21,13 +21,16 @@ http {
 
       # Only requests matching the expectations will
       # get sent to the application server
-      proxy_pass http://localhost:8000;
+      
+      rewrite  ^/api/(.*)  /$1 break;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_cache_bypass $http_upgrade;
+      proxy_pass http://nolo-api:8000;
     }
   }
 }
