--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -30,7 +30,7 @@ http {
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_cache_bypass $http_upgrade;
-      proxy_pass http://nolo-api:8000;
+      proxy_pass http://localhost:8000;
     }
   }
 }
