--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -24,4 +24,4 @@ COPY . .
 EXPOSE 8000
 
 # Run the FastAPI application using uvicorn server
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--root-path", "/api", "--reload"]
