--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -22,6 +22,26 @@ http {
       # Only requests matching the expectations will
       # get sent to the application server
       
+      rewrite  ^/api(.*)  /$1 break;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_cache_bypass $http_upgrade;
+      proxy_pass http://localhost:8000;
+    }
+
+    location /api/ {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+        return 405;
+      }
+
+      # Only requests matching the expectations will
+      # get sent to the application server
+      
       rewrite  ^/api/(.*)  /$1 break;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
