--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -52,5 +52,24 @@ http {
       proxy_cache_bypass $http_upgrade;
       proxy_pass http://localhost:8000;
     }
+
+    location / {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+        return 405;
+      }
+
+      # Only requests matching the expectations will
+      # get sent to the application server
+      
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_cache_bypass $http_upgrade;
+      proxy_pass http://localhost:3000/folletos;
+    }
   }
 }
