Modifying the Reverse Proxy to work with frontend

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -53,7 +53,7 @@ http {
       proxy_pass http://localhost:8000;
     }
 
-    location / {
+    location /folletos {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
         return 405;
