Modifying the Reverse Proxy to work with frontend

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -9,6 +9,9 @@ http {
   gzip_types text/plain application/json;
   gzip_min_length 1000;
 
+  #To resolve Entity Too Large issue
+  client_max_body_size 100M;
+
   server {
     listen 80;
 
