--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -56,7 +56,7 @@ http {
       proxy_pass http://localhost:8000;
     }
 
-    location /folletos {
+    location / {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
         return 405;
@@ -69,10 +69,12 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Connection 'upgrade';
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_redirect     off;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_cache_bypass $http_upgrade;
-      proxy_pass http://localhost:3000/folletos;
+      proxy_pass http://localhost:3000/folletos/;
     }
   }
 }
