FIXING nginx Supported Methods

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -18,7 +18,7 @@ http {
     # NGINX will reject anything not matching /api
     location /api {
       # Reject requests with unsupported HTTP method
-      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|PATCH|DELETE)$) {
         return 405;
       }
 
@@ -38,7 +38,7 @@ http {
 
     location /api/ {
       # Reject requests with unsupported HTTP method
-      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PATCH|PUT|DELETE)$) {
         return 405;
       }
 
@@ -58,7 +58,7 @@ http {
 
     location / {
       # Reject requests with unsupported HTTP method
-      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|DELETE)$) {
+      if ($request_method !~ ^(GET|POST|HEAD|OPTIONS|PUT|PATCH|DELETE)$) {
         return 405;
       }
 
