--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -27,6 +27,10 @@ http {
       
       rewrite  ^/api(.*)  /$1 break;
       proxy_http_version 1.1;
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Connection 'upgrade';
@@ -47,6 +51,10 @@ http {
       
       rewrite  ^/api/(.*)  /$1 break;
       proxy_http_version 1.1;
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Connection 'upgrade';
@@ -66,6 +74,10 @@ http {
       # get sent to the application server
       
       proxy_http_version 1.1;
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Connection 'upgrade';
